# Multithreading-finally

./: README.md
app1/: Buffer.cpp  Buffer.h  CMakeLists.txt  Client.cpp  Client.h
app1/src/: Buffer.cpp  Buffer.h  Client.cpp  Client.h  main.cpp
app2/: CMakeLists.txt  main.cpp
app2/src/: Server.cpp  Server.h  main.cpp
